fix: deploy gh-pages

--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "nuxt-app",
   "private": true,
   "scripts": {
+    "deploy": "gh-pages --dotfiles -d .output/public --repo git@github.com:witnet/my-wit-wallet-website.git --remote upstream",
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
+    "generate": "nuxi generate",
+    "preview": "nuxi preview",
+    "postinstall": "nuxi prepare",
     "lint:js": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
     "lint:prettier": "prettier --check .",
     "lint": "yarn lint:js && yarn lint:prettier",
@@ -29,6 +30,11 @@
     "vue-i18n": "^9.2.2"
   },
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "gh-pages": "^5.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com:witnet/my-wit-wallet-website.git"
   }
 }
