--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   pages:
     runs-on: ubuntu-latest
-    environment: github_pages
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -29,6 +28,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./output/public
+          publish_dir: .output/public
           cname: mywitwallet.com
-
