--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,4 @@
-name: Pages
+name: Deploy
 
 on:
   push:
@@ -6,28 +6,55 @@ on:
       - 'main'
   workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  pages: write
+  id-token: write
+
 jobs:
-  pages:
+  build:
     runs-on: ubuntu-latest
-    environment: github_pages
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Setup node env
-        uses: actions/setup-node@v3
+      - name: Enable corepack
+        run: corepack enable pnpm
+
+      - name: Setup node
+        uses: actions/setup-node@v4
         with:
-          node-version: '16.20.0'
+          node-version: 20
+          cache: 'pnpm'
 
-      - name: Install Dependencies
-        run: yarn
-
-      - name: Generate
-        run: yarn generate
-
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Restore cache
+        uses: actions/cache@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: .output/public
-          cname: mywitwallet.com
+          path: |
+            dist
+            .nuxt
+          key: ${{ runner.os }}-nuxt-build-${{ hashFiles('dist') }}
+          restore-keys: |
+            ${{ runner.os }}-nuxt-build-
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Static HTML export with Nuxt
+        run: pnpm run generate
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./dist
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
