--- a/package.json
+++ b/package.json
@@ -1,37 +1,36 @@
 {
-  "name": "nuxt-app",
+  "name": "my-wit-wallet-website",
   "private": true,
+  "type": "module",
   "scripts": {
-    "deploy": "gh-pages --dotfiles -d .output/public --repo git@github.com:witnet/my-wit-wallet-website.git --remote upstream",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxi generate",
     "preview": "nuxi preview",
     "postinstall": "nuxi prepare",
-    "lint:js": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
+    "lint:js": "eslint -c eslint.config.js --ignore-pattern .gitignore .",
     "lint:prettier": "prettier --check .",
     "lint": "yarn lint:js && yarn lint:prettier",
-    "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
+    "lintfix": "prettier --write --list-different . && pnpm lint:js --fix"
   },
   "devDependencies": {
-    "@element-plus/nuxt": "^1.0.5",
-    "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@eslint/js": "^9.15.0",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@types/node": "^18",
     "@typescript-eslint/parser": "^5.59.5",
-    "element-plus": "^2.3.4",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "nuxt": "^3.4.3",
-    "prettier": "^2.8.8",
-    "sass": "^1.62.1",
-    "sass-loader": "^13.2.2",
-    "typescript": "^5.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "nuxt": "^3.12.4",
+    "prettier": "3.3.3",
+    "sass": "^1.69.7",
+    "typescript": "^5.5.4",
+    "user-agent-data-types": "^0.4.2",
     "vue-i18n": "^9.2.2"
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "gh-pages": "^5.0.0"
+    "eslint": "^9.15.0",
+    "typescript-eslint": "^8.15.0"
   },
   "repository": {
     "type": "git",
