fix: add .output to eslint and prettier ignore

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,8 +1,8 @@
 # Ignore build output directories
 .nuxt/
+.output/
 dist/
-./docs/** */
-./docs/_nuxt/** */
+docs/
 DEBUG=1/** */
 
 # Ignore node modules
