--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
     "nuxt": "^3.12.4",
+    "nuxt-gtag": "^3.0.2",
     "prettier": "3.3.3",
     "sass": "^1.69.7",
     "typescript": "^5.5.4",
