--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nuxt-gtag": "^3.0.2",
     "prettier": "3.3.3",
     "sass": "^1.69.7",
+    "tailwindcss": "^4.0.17",
     "typescript": "^5.5.4",
     "user-agent-data-types": "^0.4.2",
     "vue-i18n": "^9.2.2"
@@ -32,7 +33,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "eslint": "^9.15.0",
-    "typescript-eslint": "^8.15.0"
+    "typescript-eslint": "^8.15.0",
+    "wit-vue-ui": "^0.1.1"
   },
   "repository": {
     "type": "git",
